--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,18 +13,25 @@
 <div>
   <div class="image-container">
     <img src="assets/backgroundpic.png" id="background" alt="kids">
-    <div class="overlay">
-      <div class="card">
-        <div class="card-header">
-          Featured
-        </div>
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
+    <div class="form-container">
+      <form>
+      <div class="mb-3">
+        <label for="exampleInputEmail1" class="form-label">Nome de usuário</label>
+        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        
       </div>
+      <div class="mb-3">
+        <label for="exampleInputPassword1" class="form-label">Senha</label>
+        <input type="password" class="form-control" id="exampleInputPassword1">
+      </div>
+      <div class="mb-3 form-check">
+        <input type="checkbox" class="form-check-input" id="exampleCheck1">
+        <label class="form-check-label" for="exampleCheck1">Salvar dados</label>
+      </div>
+      <button type="submit" class="btn btn-primary">Enviar</button>
+    </form>
     </div>
+    
   </div>
 </div>
 
