--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,28 +1,47 @@
+body{
+  margin: 0;
+}
+
+
 .navbar {
   background-color: #8bb9e2;
   top: 0;
-  left: 0;
-  right: 0;
-  z-index: 2;
+  width:100;
+  z-index: 1;
 }
 
 
 
 .image-container {
-  position: fixed;
-  top: 56px; /* Adjust the top value based on the navbar height */
-  left: 0;
-  width: 100%;
-  height: 100vh ;/* Adjust the height to subtract the navbar height */
- 
+  
+   /* Subtracting navbar height */
   background-size: cover;
   background-position: center;
-  z-index: 1;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+
+
+}
+.image-container img{
+  width: 100%;
+  height:95vh;
+  display: block;
+
 }
 
+.form-container {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: rgba(255, 255, 255, 0.8);
+  padding: 20px;
+}
+/*
 #background{
   width: 100%;
   height: 100%;
 }
 
-
+*/
