--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -13,24 +13,45 @@
 <div>
   <div class="image-container">
     <img src="assets/backgroundpic.png" id="background" alt="kids">
-    <div class="form-container">
-      <form>
+    
+    
+    
+    
+   
+
+      <div class="form-container">
+      
+       <div class="card shadow round mt-5">
+        <div class="class-header">
+          <h3 class="text-center">Log-in </h3>
+
+        </div>
+       </div>
+       <div class="card-body">
+  <form>
       <div class="mb-3">
         <label for="exampleInputEmail1" class="form-label">Nome de usuário</label>
-        <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp">
+        <input type="email" class="form-control" id="InputEmail1" aria-describedby="emailHelp">
         
       </div>
       <div class="mb-3">
-        <label for="exampleInputPassword1" class="form-label">Senha</label>
-        <input type="password" class="form-control" id="exampleInputPassword1">
+        <label for="InputPassword1" class="form-label">Senha</label>
+        <input type="password" class="form-control" id="InputPassword1">
       </div>
-      <div class="mb-3 form-check">
+     
+         <div class="mb-3 form-check">
         <input type="checkbox" class="form-check-input" id="exampleCheck1">
         <label class="form-check-label" for="exampleCheck1">Salvar dados</label>
       </div>
-      <button type="submit" class="btn btn-primary">Enviar</button>
+      
+     
+      <button type="submit" class="btn btn-primary">Acessar</button>
     </form>
+       </div>
+       
     </div>
+    
+    
     
   </div>
 </div>
