--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -25,7 +25,7 @@ body{
 }
 .image-container img{
   width: 100%;
-  height:95vh;
+  height:90.5vh;
   display: block;
 
 }
@@ -36,8 +36,19 @@ body{
   left: 50%;
   transform: translate(-50%, -50%);
   background-color: rgba(255, 255, 255, 0.8);
-  padding: 20px;
+  padding: 50px;
 }
+.class-header{
+  margin-top: -20px;
+  
+  background-color: #8bb9e2;
+  padding: 10px;
+}
+.text-center{
+  color: white;
+  font-size:40px;
+}
+
 /*
 #background{
   width: 100%;
