--- a/src/app/components/login/login.component.scss
+++ b/src/app/components/login/login.component.scss
@@ -1,6 +1,4 @@
-body{
-  margin: 0;
-}
+
 
 
 .navbar {
@@ -25,7 +23,7 @@ body{
 }
 .image-container img{
   width: 100%;
-  height:90.5vh;
+  height:91.1vh;
   display: block;
 
 }
@@ -35,7 +33,7 @@ body{
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: rgba(255, 255, 255, 0.8);
+  background-color: rgba(172, 185, 196, 0.8);
   padding: 50px;
 }
 .class-header{
@@ -43,16 +41,25 @@ body{
   
   background-color: #8bb9e2;
   padding: 10px;
+  
 }
 .text-center{
   color: white;
   font-size:40px;
+  
 }
 
-/*
-#background{
-  width: 100%;
-  height: 100%;
+::placeholder {
+  color: gray;
 }
 
-*/
+.custom-link{
+  font-size: 20px;
+  color:#f6f9fc;
+}
+
+.form-label{
+  font-size: 20px;
+  font-family:'Segoe UI';
+  color: #010407;
+ }
