--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -18,3 +18,40 @@
   .navbar-nav.ml-auto {
     margin-left: auto;
 }
+
+.link1{
+  float: left;
+  margin-left: -340px;
+  font-size: 24px;
+  color: aliceblue;
+  
+  
+}
+.link2{
+  font-size: 24px;
+  color: aliceblue;
+  
+  
+}
+
+#trem{
+  float: left;
+ margin-left: -60px;
+}
+
+
+#peca{
+   float: left;
+  margin-left: -70px;
+}
+
+.carousel-item{
+  height: 400px;
+  width: 100%;
+
+}
+
+
+
+
+
