alteração do token para o id

--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -2,7 +2,7 @@
 <nav class="navbar">
     <div class="container">
       <div class="nav navbar-nav mx-auto" id="navbarTogglerDemo01">
-        <a class="navbar-brand" href="#"><img src="assets/icon.png" alt=""></a>
+        <a class="navbar-brand" href="home"><img src="assets/icon.png" alt=""></a>
       </div>
     </div>
   </nav>
