--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -1,6 +1,6 @@
 <nav class="navbar navbar-expand-lg " id="nav">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#"><img src="assets/icon.png" alt=""></a>
+    <a class="navbar-brand" href="home"><img src="assets/icon.png" alt=""></a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -32,7 +32,7 @@
      
       <ul class="navbar-nav ml-auto">
         <li class="nav-item1">
-          <a class="nav-link" href="#" class="link1"><img id="trem"src="assets/trem.png" alt=""><h4>Carrinho de compras </h4></a>
+          <a class="nav-link" href="carrinho" class="link1"><img id="trem"src="assets/trem.png" alt=""><h4>Carrinho de compras </h4></a>
         </li>
         </ul>
 <!--   -->
@@ -47,27 +47,4 @@
   </div>
 </nav>
 
-<div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
-  <div class="carousel-inner">
-    <div class="carousel-item active" data-bs-interval="2000">
-      <img src="assets/peca.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item" data-bs-interval="2000">
-      <img src="assets/trator.png" class="d-block w-100" alt="...">
-    </div>
-    <div class="carousel-item" data-bs-interval="2000">
-      <img src="assets/trem.png" class="d-block w-100" alt="...">
-    </div>
-  </div>
-  <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="prev">
-    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Previous</span>
-  </button>
-  <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleInterval" data-bs-slide="next">
-    <span class="carousel-control-next-icon" aria-hidden="true"></span>
-    <span class="visually-hidden">Next</span>
-  </button>
-</div>
-  <router-outlet>
 
-  </router-outlet>
