teste de requisição p/ variáveis id, type, name

--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -19,7 +19,7 @@
         
          <div class="card shadow round mt-6">
           <div class="class-header">
-            <h3 class="text-center">Cadastro</h3>
+            <h3 class="text-center">Cadastro de usuário</h3>
   
           </div>
          </div>
