--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -2,10 +2,10 @@
 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active" data-bs-interval="2000">
-        <img src="assets/peca.png" class="d-block w-100" alt="...">
+        <img src="assets/carrousel1.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item" data-bs-interval="2000">
-        <img src="assets/trator.png" class="d-block w-100" alt="...">
+        <img src="assets/carrousel2.png" class="d-block w-100" alt="...">
       </div>
       <div class="carousel-item" data-bs-interval="20000">
         <img src="assets/homiranha.png" class="d-block w-100" alt="...">
