--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -32,17 +32,31 @@
      
       <ul class="navbar-nav ml-auto">
         <li class="nav-item1">
-          <a class="nav-link" href="carrinho" class="link1"><img id="trem"src="assets/trem.png" alt=""><h4>Carrinho de compras </h4></a>
+          <a class="nav-link" href="carrinho" class="link1"><img id="trem"src="assets/trem.png" alt="">
+            <h4>Carrinho de compras </h4>
+          </a>
         </li>
-        </ul>
-<!--   -->
+    </ul>
+
       <ul class="navbar-nav ml-auto">
         <li class="nav-item2">
           <a class="nav-link" href="login" class="link2"><img id="peca"src="assets/peca.png" alt=""><h4>Entre ou<br>cadastre-se </h4></a>
         </li>
         </ul>
+ 
+ <!--      
+
+    <li class="nav-item1">
+  <a class="nav-link" href="carrinho" class="link1">
+    <img id="trem" src="assets/trem.png" alt="">
+    <span class="btn btn-info">Carrinho de compras</span>
+  </a>
+   </li> 
+-->
+
 
      
+        
       </div>
   </div>
 </nav>
