--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -31,27 +31,35 @@
       </div>
      
       <ul class="navbar-nav ml-auto">
-        <li class="nav-item1">
-          <a class="nav-link" href="carrinho" class="link1"><img id="trem"src="assets/trem.png" alt="">
-            <h4>Carrinho de compras </h4>
-          </a>
-        </li>
+          <li class="nav-item1">
+  <a class="nav-link" href="carrinho" class="link1">
+    <img id="trem" src="assets/trem.png" alt="">
+    <span class="btn btn-info" routerLink="/carrinho">Carrinho de compras</span>
+  </a>
+   </li> 
     </ul>
 
       <ul class="navbar-nav ml-auto">
         <li class="nav-item2">
-          <a class="nav-link" href="login" class="link2"><img id="peca"src="assets/peca.png" alt=""><h4>Entre ou<br>cadastre-se </h4></a>
+          <a class="nav-link" href="login" class="link2"><img id="peca"src="assets/peca.png" alt=""><span class="btn btn-info">Entre ou<br>cadastre-se </span></a>
         </li>
-        </ul>
+      </ul>
  
- <!--      
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item2">
+          <a class="nav-link" href="login" class="link3"><img id="bola"src="assets/bola.png" alt=""><span class="btn btn-info" (click) ="logOut()">Sair </span></a>
+        </li>
+      </ul>
 
-    <li class="nav-item1">
-  <a class="nav-link" href="carrinho" class="link1">
-    <img id="trem" src="assets/trem.png" alt="">
-    <span class="btn btn-info">Carrinho de compras</span>
-  </a>
-   </li> 
+      
+<!-- 
+ 
+     
+  <li class="nav-item1">
+          <a class="nav-link" href="carrinho" class="link1"><img id="trem"src="assets/trem.png" alt="">
+            <h4>Carrinho de compras </h4>
+          </a>
+        </li>
 -->
 
 
