autenticação de rota para vendedor

--- a/src/app/pages/layout/layout.component.scss
+++ b/src/app/pages/layout/layout.component.scss
@@ -55,6 +55,17 @@
   border: #8bb9e2;
 }
 
+#pipa{
+  float: left;
+  margin-left: -65px;
+}
+.link4{
+  
+  float: left;
+  margin-left: -700px;
+ 
+  text-decoration: none;
+}
 .btn-info:hover{
   
   background-color: rgb(39, 143, 241);
