--- a/src/app/pages/layout/layout.component.html
+++ b/src/app/pages/layout/layout.component.html
@@ -31,6 +31,12 @@
       </div>
      
       <ul class="navbar-nav ml-auto">
+        <li class="nav-item2">
+          <a [hidden]="!isSeller()" class="nav-link" href="seller" class="link4"><img id="produto" src="assets/pipa.png" alt=""><span class="btn btn-info" >Cadastro de Produtos </span></a>
+        </li>
+      </ul>
+
+      <ul class="navbar-nav ml-auto">
           <li class="nav-item1">
   <a class="nav-link" href="carrinho" class="link1">
     <img id="trem" src="assets/trem.png" alt="">
@@ -50,6 +56,8 @@
           <a [hidden]="loggedOut()" class="nav-link" href="login" class="link3"><img id="bola"src="assets/bola.png" alt=""><span class="btn btn-info"  (click) ="logOut()">Sair </span></a>
         </li>
       </ul>
+
+
 
       
 <!-- 
