--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -49,9 +49,9 @@
       </div>
      
          <div class="mb-3 form-check">
-        <input type="checkbox" class="form-check-input" id="exampleCheck1" >
+        <input type="checkbox" class="form-check-input" id="Check1" >
        
-        <label class="form-check-label" for="exampleCheck1">Salvar dados</label>
+        <label class="form-check-label" for="Check1">Salvar dados</label>
         
       </div>
       
