--- a/src/app/components/cadastro/cadastro.component.scss
+++ b/src/app/components/cadastro/cadastro.component.scss
@@ -3,37 +3,43 @@
     top: 0;
     width:100;
     z-index: 1;
-  }
   
+  }
+
+
   
 .image-container {
   
-    /* Subtracting navbar height */
    background-size: cover;
    background-position: center;
    display: flex;
    align-items: center;
    justify-content: center;
- 
+   
+
  
  }
  .image-container img{
+  
    width: 100%;
-   height:91.1vh;
-   display: block;
- 
+   height:150vh;
+   display:block;
+   object-fit: cover;
  }
  
  .form-container {
-   position: absolute;
-   top: 50%;
+
+   position:absolute;
+   top: 80%;
    left: 50%;
    transform: translate(-50%, -50%);
    background-color: rgba(172, 185, 196, 0.8);
-   padding: 50px;
+   padding: 30px;
+   
+   
  }
  .class-header{
-   margin-top: -20px;
+   margin-top: -10px;
    
    background-color: #8bb9e2;
    padding: 10px;
@@ -51,4 +57,8 @@
   font-size: 20px;
   font-family:'Segoe UI';
   color: #010407;
+ }
+
+ form{
+  max-height: 90%;
  }
