Cadastro de produto iniciado

--- a/src/app/private/seller/seller.component.html
+++ b/src/app/private/seller/seller.component.html
@@ -24,16 +24,42 @@
           </div>
          </div>
          <div class="card-body">
-    <form  >
+    <form >
       <hr>
         <div class="mb-3">
-          <label for="exampleInputEmail1" class="form-label">Nome do Produto</label>
-          <div class="input-group">
-            <input type="text" class="form-control" id="InputName" aria-describedby="emailHelp" formControlName="name" placeholder="Nome">
+          <label for="InputName" class="form-label">Nome do Produto:</label>
+          
+            <input type="text" class="form-control" id="InputName" aria-describedby="" formControlName="name" placeholder="Nome">
 
         </div>
 
+        <div class="mb-3">
+          <label for="Inpucategory" class="form-label">Categoria: </label>
+          
+            <input type="text" class="form-control" id="Name" aria-describedby="" formControlName="category" placeholder="Categoria">
+
         </div>
+
+        <div class="mb-3">
+          <label for="Inputvalue" class="form-label">Valor do Produto:</label>
+          
+            <input type="text" class="form-control" id="Value" aria-describedby="" formControlName="category" placeholder="Preço">
+
+        </div>
+
+        
+        <div class="mb-3">
+          <label for="Inputdescription" class="form-label">Descrição do Produto</label>
+          
+            <input type="text" class="form-control" id="Value" aria-describedby="" formControlName="description" placeholder="Descrição">
+
+        </div>
+
+
+
+
+
+
         
        
         
