teste de animações

--- a/src/app/components/login/login.component.html
+++ b/src/app/components/login/login.component.html
@@ -16,7 +16,7 @@
     
     
 
-
+    <div [@fadeIn]>
       <div class="form-container">
       
        <div class="card shadow round mt-6">
@@ -65,7 +65,7 @@
        
     </div>
     
-    
+    </div>
     
   </div>
 </div>
