--- a/src/app/components/cadastro/cadastro.component.html
+++ b/src/app/components/cadastro/cadastro.component.html
@@ -14,7 +14,7 @@
       
       
   
-  
+  <div [@rotate]>
         <div class="form-container">
         
          <div class="card shadow round mt-6">
@@ -100,7 +100,7 @@
         
       </div>
       
-      
+    </div>
       
     </div>
   </div>
