--- a/src/app/components/home/home.component.html
+++ b/src/app/components/home/home.component.html
@@ -1,3 +1,5 @@
+
+
 <app-layout></app-layout>
 <div id="carouselExampleInterval" class="carousel slide" data-bs-ride="carousel">
     <div class="carousel-inner">
@@ -21,6 +23,7 @@
     </button>
   </div>
 <h1 class="p-3 text-center">
-    Seja bem-vindo(a) {{name}} !
-
+   
+<div [@fadeIn]>  Seja bem-vindo(a) {{name}} !</div>
 </h1>
+
